--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  background-color: #FAFAFA;
+  opacity: 100%;
 }
 
 .App-logo {
@@ -11,28 +13,18 @@
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.mainheader{
+text-align: left;
+font: normal normal 900 40px/53px Roboto,Helvetica ,Neue, sans-serif;
+letter-spacing: 0px;
+color: #000000;
+opacity: 1;
+padding-top: 20px;
+margin-left: 10px;
+
 }
 
-.App-link {
-  color: #61dafb;
-}
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
