api key changed

--- a/src/Components/index.css
+++ b/src/Components/index.css
@@ -21,7 +21,7 @@
     border: none;
     outline: none;
     width: 70%;
-    color: #EBEBEB;
+    color: #000000;
     font: normal normal normal 14px/19px Roboto;
 }
 .catHeading{
